@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure — Compare and retire versions

class CurriculumWorkflow {
  +CompareAsync(actor, id, baseVersionId): Task<VersionComparison>
  +RetireAsync(actor, id, request): Task<ImportStatus>
  +AssignAsync(actor, request, correlationId): Task<Assignment>
  +GetLessonAsync(actor, versionId, courseId, lessonId): Task<LessonView>
}

class PackageVersionComparer {
  +Compare(baseVersionId, baseline, targetVersionId, target): VersionComparison
}

class VersionComparison {
  +Guid BaseVersionId
  +Guid TargetVersionId
  +string BaseVersion
  +string TargetVersion
  +IReadOnlyList~VersionChange~ Changes
  +IReadOnlyList~string~ AffectedObjectiveIds
  +bool LearnerRefreshRequired
}

class VersionChange {
  +string Classification
  +string EntityType
  +string EntityId
  +IReadOnlyList~string~ AffectedObjectiveIds
  +bool LearnerRefreshRequired
}

class Retirement {
  +Guid VersionId
  +string TenantId
  +string RetiredBy
  +DateTimeOffset RetiredAt
  +string ExistingAssignmentPolicy
  +string Reason
  +Guid EventId
}

class CurriculumRecord {
  +CurriculumStatus Status
  +Publication? Publication
  +Retirement? Retirement
}

class CurriculumLifecycle {
  +Retire(): void
}

interface ICurriculumStore {
  +GetPublishedAsync(tenantId, versionId): Task<CurriculumRecord?>
  +GetRetainedVersionAsync(tenantId, versionId): Task<CurriculumRecord?>
  +SaveImportAsync(record, action, actorId): Task
}

class CurriculumStore
class DomainEventEntity

CurriculumWorkflow --> PackageVersionComparer : classifies through
PackageVersionComparer --> VersionComparison : creates
VersionComparison *-- "0..*" VersionChange
CurriculumWorkflow --> CurriculumLifecycle : transitions through
CurriculumWorkflow ..> Retirement : creates
CurriculumWorkflow --> ICurriculumStore : loads and saves through
ICurriculumStore <|.. CurriculumStore
CurriculumRecord *-- "0..1" Retirement
Retirement ..> DomainEventEntity : serialized into
ICurriculumStore --> CurriculumRecord : stores
@enduml
